force-app/main/default/objects/Opportunity/fields/Grund_VKC_verloren__c.field-meta.xml
<CustomField>
    <fullName>Grund_VKC_verloren__c</fullName>
    <label>Grund VKC verloren</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aus TeamProQ storniert</fullName>
            </value>
            <value>
                <fullName>Durch WH auf anderes Objekt umgestellt</fullName>
            </value>
            <value>
                <fullName>Interessent bevorzugt ein anderes Investment</fullName>
            </value>
            <value>
                <fullName>Interessent hat kein Interesse mehr</fullName>
            </value>
            <value>
                <fullName>Interessent ist erkrankt</fullName>
            </value>
            <value>
                <fullName>Interessent möchte ein anderes Objekt</fullName>
            </value>
            <value>
                <fullName>Interessent möchte sein Kapital jetzt anlegen</fullName>
            </value>
            <value>
                <fullName>Interessent reagiert nicht mehr</fullName>
            </value>
            <value>
                <fullName>Interessent unzufrieden mit Abwicklung WH</fullName>
            </value>
            <value>
                <fullName>Interessent unzufrieden mit Makler</fullName>
            </value>
            <value>
                <fullName>Interessent will später investieren</fullName>
            </value>
            <value>
                <fullName>Kapital wird anderweitig benötigt</fullName>
            </value>
            <value>
                <fullName>Keine Finanzierung möglich</fullName>
            </value>
            <value>
                <fullName>Makler ist erkrankt</fullName>
            </value>
            <value>
                <fullName>Makler reagiert nicht mehr</fullName>
            </value>
            <value>
                <fullName>Objekt wird anderweitig verkauft</fullName>
            </value>
            <value>
                <fullName>Reservierungsschein abgelehnt</fullName>
            </value>
            <value>
                <fullName>Rückabwicklung</fullName>
            </value>
            <value>
                <fullName>VKC ausgelaufen</fullName>
            </value>
            <value>
                <fullName>VSA abgelehnt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>