force-app/main/default/objects/Opportunity/fields/Grundprovision_Immobilie__c.field-meta.xml
<CustomField>
    <fullName>Grundprovision_Immobilie__c</fullName>
    <formula>Immobilie__r.Grundprovision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grundprovision Immobilie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>