force-app/main/default/objects/Opportunity/fields/Grundprovision_Provisionsverhandlung__c.field-meta.xml
<CustomField>
    <fullName>Grundprovision_Provisionsverhandlung__c</fullName>
    <label>Grundprovision Provisionsverhandlung</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>