force-app/main/default/objects/Opportunity/fields/Grundprovision_Teilobjekt__c.field-meta.xml
<CustomField>
    <fullName>Grundprovision_Teilobjekt__c</fullName>
    <formula>Appartement__r.Grundprovision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grundprovision Teilobjekt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>