force-app/main/default/objects/Opportunity/fields/GS_bestellt__c.field-meta.xml
<CustomField>
    <fullName>GS_bestellt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GS bestellt</label>
    <type>Checkbox</type>
</CustomField>