force-app/main/default/objects/Opportunity/fields/GS_bestellt_am__c.field-meta.xml
<CustomField>
    <fullName>GS_bestellt_am__c</fullName>
    <inlineHelpText>Datum der notariellen Grundschuldbestellung</inlineHelpText>
    <label>GS bestellt am</label>
    <type>Date</type>
</CustomField>