force-app/main/default/objects/Opportunity/fields/HatAufschiebendeBedingung__c.field-meta.xml
<CustomField>
    <fullName>HatAufschiebendeBedingung__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Gibt an, ob diese VKC eine aufschiebende Bedingung hat. Solange die Bedingung nicht erfüllt ist, werden keine Provisionen oder Gutschriften erzeugt.</inlineHelpText>
    <label>Hat aufschiebende Bedingung</label>
    <type>Checkbox</type>
</CustomField>