force-app/main/default/objects/Opportunity/fields/HatVKCZahlungen__c.field-meta.xml
<CustomField>
    <fullName>HatVKCZahlungen__c</fullName>
    <formula>AnzahlVKCZahlungen__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hat VKC Zahlungen</label>
    <type>Checkbox</type>
</CustomField>