force-app/main/default/objects/Opportunity/fields/Immobilie_makler__c.field-meta.xml
<CustomField>
    <fullName>Immobilie_makler__c</fullName>
    <formula>Immobilie__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Immobilie (alt)</label>
    <type>Text</type>
</CustomField>