force-app/main/default/objects/Opportunity/fields/Immobilienberater__c.field-meta.xml
<CustomField>
    <fullName>Immobilienberater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Hier wird der Makler eingetragen, der die Beratungsleistung am Kunden durchgeführt hat.</inlineHelpText>
    <label>Immobilienberater</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Immobilienberater)</relationshipLabel>
    <relationshipName>Immobilienberater</relationshipName>
    <type>Lookup</type>
</CustomField>