force-app/main/default/objects/Opportunity/fields/ImmobilienberaterIstIntern__c.field-meta.xml
<CustomField>
    <fullName>ImmobilienberaterIstIntern__c</fullName>
    <formula>Immobilienberater__r.Ist_Maklerbetreuer_WH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Immobilienberater ist intern</label>
    <type>Checkbox</type>
</CustomField>