force-app/main/default/objects/Opportunity/fields/Immobiliennummer__c.field-meta.xml
<CustomField>
    <fullName>Immobiliennummer__c</fullName>
    <formula>Immobilie__r.Objektnummer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Immobiliennummer</label>
    <type>Text</type>
</CustomField>