force-app/main/default/objects/Opportunity/fields/IncentivierungGesamt__c.field-meta.xml
<CustomField>
    <fullName>IncentivierungGesamt__c</fullName>
    <formula>AdditionalBrokerCommission__c + AdditionalCosts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentivierung gesamt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>