force-app/main/default/objects/Opportunity/fields/IncentivierungKundeGezahltAm__c.field-meta.xml
<CustomField>
    <fullName>IncentivierungKundeGezahltAm__c</fullName>
    <label>Incentivierung Kunde gezahlt am</label>
    <type>Date</type>
</CustomField>