force-app/main/default/objects/Opportunity/fields/InterestedInCarestoneFinancing__c.field-meta.xml
<CustomField>
    <fullName>InterestedInCarestoneFinancing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interesse an CS Finanzierung besteht</label>
    <type>Checkbox</type>
</CustomField>