force-app/main/default/objects/Opportunity/fields/InterneProvisionenGeneriert__c.field-meta.xml
<CustomField>
    <fullName>InterneProvisionenGeneriert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interne Provisionen generiert</label>
    <type>Checkbox</type>
</CustomField>