force-app/main/default/objects/Opportunity/fields/InterneProvisionenNeuGenerieren__c.field-meta.xml
<CustomField>
    <fullName>InterneProvisionenNeuGenerieren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interne Provisionen neu generieren</label>
    <type>Checkbox</type>
</CustomField>