force-app/main/default/objects/Opportunity/fields/Ist_ffentlich__c.field-meta.xml
<CustomField>
    <fullName>Ist_ffentlich__c</fullName>
    <formula>Immobilie__r.Is_Public__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ist öffentlich</label>
    <type>Checkbox</type>
</CustomField>