force-app/main/default/objects/Opportunity/fields/K_ufer__c.field-meta.xml
<CustomField>
    <fullName>K_ufer__c</fullName>
    <label>Abweichender Käufer laut Vertrag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>