force-app/main/default/objects/Opportunity/fields/K_ufer_weicht_von_Teilobjekt_ab__c.field-meta.xml
<CustomField>
    <fullName>K_ufer_weicht_von_Teilobjekt_ab__c</fullName>
    <formula>Potenzieller_Kunde__c !=  Appartement__r.Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Käufer weicht von Teilobjekt ab</label>
    <type>Checkbox</type>
</CustomField>