force-app/main/default/objects/Opportunity/fields/K_uferangebot_abgegeben__c.field-meta.xml
<CustomField>
    <fullName>K_uferangebot_abgegeben__c</fullName>
    <label>Käuferangebot abgegeben</label>
    <type>Date</type>
</CustomField>