force-app/main/default/objects/Opportunity/fields/Kaufdatum__c.field-meta.xml
<CustomField>
    <fullName>Kaufdatum__c</fullName>
    <label>Kaufdatum</label>
    <type>Date</type>
</CustomField>