force-app/main/default/objects/Opportunity/fields/Kaufpreis__c.field-meta.xml
<CustomField>
    <fullName>Kaufpreis__c</fullName>
    <formula>IF( Appartement__r.DeviatingPurchasePrice__c != 0 &amp;&amp; !IsBlank(Appartement__r.DeviatingPurchasePrice__c), Appartement__r.DeviatingPurchasePrice__c, Appartement__r.Purchase_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listenpreis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>