force-app/main/default/objects/Opportunity/fields/Kaufpreis_bezahlt__c.field-meta.xml
<CustomField>
    <fullName>Kaufpreis_bezahlt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kaufpreis bezahlt</label>
    <type>Checkbox</type>
</CustomField>