force-app/main/default/objects/Opportunity/fields/Kaufpreis_f_llig__c.field-meta.xml
<CustomField>
    <fullName>Kaufpreis_f_llig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kaufpreis fällig</label>
    <type>Checkbox</type>
</CustomField>