force-app/main/default/objects/Opportunity/fields/Kaufpreis_Kunde__c.field-meta.xml
<CustomField>
    <fullName>Kaufpreis_Kunde__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kaufpreis Kunde</label>
    <type>Checkbox</type>
</CustomField>