force-app/main/default/objects/Opportunity/fields/Kaufvertrag_abgegeben__c.field-meta.xml
<CustomField>
    <fullName>Kaufvertrag_abgegeben__c</fullName>
    <label>Kaufvertragsangebot abgegeben</label>
    <type>Date</type>
</CustomField>