force-app/main/default/objects/Opportunity/fields/Kaufvertrag_angenommen__c.field-meta.xml
<CustomField>
    <fullName>Kaufvertrag_angenommen__c</fullName>
    <label>Kaufvertragsangebot angenommen</label>
    <type>Date</type>
</CustomField>