force-app/main/default/objects/Opportunity/fields/Kaufvertragsangebot_abgegeben_Controll__c.field-meta.xml
<CustomField>
    <fullName>Kaufvertragsangebot_abgegeben_Controll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kaufvertragsangebot abgegeben Controll</label>
    <type>Checkbox</type>
</CustomField>