force-app/main/default/objects/Opportunity/fields/Kaufvertragsangebot_verschickt__c.field-meta.xml
<CustomField>
    <fullName>Kaufvertragsangebot_verschickt__c</fullName>
    <label>Kaufvertragsunterlagen verschickt</label>
    <type>Date</type>
</CustomField>