force-app/main/default/objects/Opportunity/fields/Kaufvertragsunterlagen_v_Notar_versendet__c.field-meta.xml
<CustomField>
    <fullName>Kaufvertragsunterlagen_v_Notar_versendet__c</fullName>
    <label>Kaufvertragsunterlagen v Notar versendet</label>
    <type>Date</type>
</CustomField>