force-app/main/default/objects/Opportunity/fields/KeineMaBVRechnungGenerieren__c.field-meta.xml
<CustomField>
    <fullName>KeineMaBVRechnungGenerieren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keine MaBV Rechnung generieren</label>
    <type>Checkbox</type>
</CustomField>