force-app/main/default/objects/Opportunity/fields/KfW__c.field-meta.xml
<CustomField>
    <fullName>KfW__c</fullName>
    <defaultValue>0</defaultValue>
    <label>KfW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>