force-app/main/default/objects/Opportunity/fields/KfwBestaetigungVorhanden__c.field-meta.xml
<CustomField>
    <fullName>KfwBestaetigungVorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genehmigung des KfW-Zuschuss liegt vor</label>
    <type>Checkbox</type>
</CustomField>