force-app/main/default/objects/Opportunity/fields/KfwWunschFinanzierungsanfrage__c.field-meta.xml
<CustomField>
    <fullName>KfwWunschFinanzierungsanfrage__c</fullName>
    <label>KfW Wunsch Finanzierungsanfrage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>