force-app/main/default/objects/Opportunity/fields/KommentareAbrechnung__c.field-meta.xml
<CustomField>
    <fullName>KommentareAbrechnung__c</fullName>
    <label>Kommentare Abrechnung</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>