force-app/main/default/objects/Opportunity/fields/KontingentAn__c.field-meta.xml
<CustomField>
    <fullName>KontingentAn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kontingent an:</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Verkaufschancen</relationshipLabel>
    <relationshipName>Verkaufschancen</relationshipName>
    <type>Lookup</type>
</CustomField>