force-app/main/default/objects/Opportunity/fields/Kumulierte_Provision_neu__c.field-meta.xml
<CustomField>
    <fullName>Kumulierte_Provision_neu__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Provision inkl. Rabatt auf Listenpreis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>