force-app/main/default/objects/Opportunity/fields/KumulierteProvision__c.field-meta.xml
<CustomField>
    <fullName>KumulierteProvision__c</fullName>
    <label>Kumulierte Provision</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>