force-app/main/default/objects/Opportunity/fields/KumulierteProvisionExtern__c.field-meta.xml
<CustomField>
    <fullName>KumulierteProvisionExtern__c</fullName>
    <label>Kumulierte Provision extern</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>