force-app/main/default/objects/Opportunity/fields/Kunde2__c.field-meta.xml
<CustomField>
    <fullName>Kunde2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2. Käufer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Verkaufschancen (2. Käufer)</relationshipLabel>
    <relationshipName>Verkaufschancen</relationshipName>
    <type>Lookup</type>
</CustomField>