force-app/main/default/objects/Opportunity/fields/KundenappStatusKurz__c.field-meta.xml
<CustomField>
    <fullName>KundenappStatusKurz__c</fullName>
    <formula>IF(!Kaufpreis_bezahlt__c &amp;&amp; !IsBlank(Notartermin__c), &apos;Notartermin&apos;, IF( Kaufpreis_bezahlt__c, &apos;Erworben&apos;, &apos;Reserviert&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kundenapp Status kurz</label>
    <type>Text</type>
</CustomField>