force-app/main/default/objects/Opportunity/fields/Kundenspezifische_Incentivierung__c.field-meta.xml
<CustomField>
    <fullName>Kundenspezifische_Incentivierung__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Kundenspezifische Incentivierung</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>