force-app/main/default/objects/Opportunity/fields/KV_eingegangen__c.field-meta.xml
<CustomField>
    <fullName>KV_eingegangen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KV eingegangen</label>
    <type>Checkbox</type>
</CustomField>