force-app/main/default/objects/Opportunity/fields/KV_eingegangen_Datum__c.field-meta.xml
<CustomField>
    <fullName>KV_eingegangen_Datum__c</fullName>
    <label>KV eingegangen Datum</label>
    <type>Date</type>
</CustomField>