force-app/main/default/objects/Opportunity/fields/LeadQuelleMakler__c.field-meta.xml
<CustomField>
    <fullName>LeadQuelleMakler__c</fullName>
    <label>Lead-Quelle Makler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AirCall</fullName>
            </value>
            <value>
                <fullName>Anruf</fullName>
            </value>
            <value>
                <fullName>Bestandskunde</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>FWS Lead</fullName>
            </value>
            <value>
                <fullName>Gewinnspiel</fullName>
            </value>
            <value>
                <fullName>Immobilienscout24.de</fullName>
            </value>
            <value>
                <fullName>Immoframe</fullName>
            </value>
            <value>
                <fullName>Immowelt.de</fullName>
            </value>
            <value>
                <fullName>Infoveranstaltung in Rietberg</fullName>
            </value>
            <value>
                <fullName>LeadGroup</fullName>
            </value>
            <value>
                <fullName>Neubaukompass</fullName>
            </value>
            <value>
                <fullName>Objektveranstaltung</fullName>
            </value>
            <value>
                <fullName>Pflege.de</fullName>
            </value>
            <value>
                <fullName>Pflege.de-Curainvest</fullName>
            </value>
            <value>
                <fullName>Ploke</fullName>
            </value>
            <value>
                <fullName>Profino-Webinar 01.04.2025</fullName>
            </value>
            <value>
                <fullName>Profino-Webinar 11.12.2024</fullName>
            </value>
            <value>
                <fullName>Profino-Webinar 21.02.2025</fullName>
            </value>
            <value>
                <fullName>QR-Code Formular</fullName>
            </value>
            <value>
                <fullName>Reach Local</fullName>
            </value>
            <value>
                <fullName>simply Leads</fullName>
            </value>
            <value>
                <fullName>SL Immobilien</fullName>
            </value>
            <value>
                <fullName>Webinare</fullName>
            </value>
            <value>
                <fullName>WH Direct</fullName>
            </value>
            <value>
                <fullName>WH Express</fullName>
            </value>
            <value>
                <fullName>MetaAdCampaign_MMG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>