force-app/main/default/objects/Opportunity/fields/LetzteMahnungAm__c.field-meta.xml
<CustomField>
    <fullName>LetzteMahnungAm__c</fullName>
    <label>Letzte Mahnung am</label>
    <type>Date</type>
</CustomField>