force-app/main/default/objects/Opportunity/fields/Letztes_Phasenupdate_am__c.field-meta.xml
<CustomField>
    <fullName>Letztes_Phasenupdate_am__c</fullName>
    <label>Letztes Phasenupdate am</label>
    <type>Date</type>
</CustomField>