force-app/main/default/objects/Opportunity/fields/LostInterest__c.field-meta.xml
<CustomField>
    <fullName>LostInterest__c</fullName>
    <formula>OffenerBetrag__c * TageUeberfaellig__c / 365 * 0.01</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entgangene Zinsen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>