force-app/main/default/objects/Opportunity/fields/MaBV__c.field-meta.xml
<CustomField>
    <fullName>MaBV__c</fullName>
    <formula>TEXT(Immobilie__r.MaBV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MaBV</label>
    <type>Text</type>
</CustomField>