force-app/main/default/objects/Opportunity/fields/MaBVAbweichendeAbrechnung__c.field-meta.xml
<CustomField>
    <fullName>MaBVAbweichendeAbrechnung__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Wenn hier eine Immobilie hinterlegt ist, werden die MaBV Abrechnungsdaten &quot;Bank&quot;, &quot;IBAN&quot; und &quot;BIC&quot; von dieser Immobilie gezogen.</inlineHelpText>
    <label>MaBV Abweichende Abrechnung</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Verkaufschancen (MaBV Abweichende Abrechnung)</relationshipLabel>
    <relationshipName>VerkaufschancenMaBVAbweichendeAbrechnung</relationshipName>
    <type>Lookup</type>
</CustomField>