force-app/main/default/objects/Opportunity/fields/Mahnstufe__c.field-meta.xml
<CustomField>
    <fullName>Mahnstufe__c</fullName>
    <label>Mahnstufe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>