force-app/main/default/objects/Opportunity/fields/MahnungGenerieren__c.field-meta.xml
<CustomField>
    <fullName>MahnungGenerieren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mahnung generieren</label>
    <type>Checkbox</type>
</CustomField>