force-app/main/default/objects/Opportunity/fields/Makler_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Makler_E_Mail__c</fullName>
    <label>Makler E-Mail</label>
    <type>Email</type>
</CustomField>