force-app/main/default/objects/Opportunity/fields/Maklerbetreuer_WirtschaftsHaus__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer_WirtschaftsHaus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maklerbetreuer Carestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Ist_Maklerbetreuer_WH__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Maklerbetreuer WirtschaftsHaus)</relationshipLabel>
    <relationshipName>Maklerbetreuer_Wirtschaftshaus</relationshipName>
    <type>Lookup</type>
</CustomField>