force-app/main/default/objects/Opportunity/fields/MaklerIstIntern__c.field-meta.xml
<CustomField>
    <fullName>MaklerIstIntern__c</fullName>
    <formula>INCLUDES(Makler__r.Gesch_ftsbeziehung__c, &apos;Mitarbeiter WH&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Makler ist intern</label>
    <type>Checkbox</type>
</CustomField>