force-app/main/default/objects/Opportunity/fields/Maklerprovision__c.field-meta.xml
<CustomField>
    <fullName>Maklerprovision__c</fullName>
    <label>Grundprovision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keine</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>4.5</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>5.5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>6.5</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>7.5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>8.5</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>9.5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>10.5</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>3.8</fullName>
            </value>
            <value>
                <fullName>4.3</fullName>
            </value>
            <value>
                <fullName>3.75</fullName>
            </value>
            <value>
                <fullName>4.25</fullName>
            </value>
            <value>
                <fullName>4.75</fullName>
            </value>
            <value>
                <fullName>5.25</fullName>
            </value>
            <value>
                <fullName>5.75</fullName>
            </value>
            <value>
                <fullName>6.25</fullName>
            </value>
            <value>
                <fullName>6.75</fullName>
            </value>
            <value>
                <fullName>7.25</fullName>
            </value>
            <value>
                <fullName>7.75</fullName>
            </value>
            <value>
                <fullName>8.25</fullName>
            </value>
            <value>
                <fullName>8.75</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>