force-app/main/default/objects/Opportunity/fields/Maklerprovision_nach_Nachtrag__c.field-meta.xml
<CustomField>
    <fullName>Maklerprovision_nach_Nachtrag__c</fullName>
    <formula>IF(!ISBLANK(Abweichende_Grundprovision__c), Abweichende_Grundprovision__c*100, IF(!ISBLANK(Grundprovision_Provisionsverhandlung__c),  Grundprovision_Provisionsverhandlung__c , IF(TEXT(Maklerprovision__c) != null &amp;&amp; TEXT(Maklerprovision__c) != &apos;Keine&apos;, VALUE(TEXT(Maklerprovision__c)), 0)))</formula>
    <label>Grundprovision nach Nachtrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>