force-app/main/default/objects/Opportunity/fields/MarketingzuschussInEuro__c.field-meta.xml
<CustomField>
    <fullName>MarketingzuschussInEuro__c</fullName>
    <label>Marketingzuschuss in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>