force-app/main/default/objects/Opportunity/fields/MobiltelefonErsterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>MobiltelefonErsterKaeufer__c</fullName>
    <formula>Potenzieller_Kunde__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobiltelefon 1. Käufer</label>
    <type>Text</type>
</CustomField>