force-app/main/default/objects/Opportunity/fields/Nachweis_Barzahler__c.field-meta.xml
<CustomField>
    <fullName>Nachweis_Barzahler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EK-Nachweis liegt vor</label>
    <type>Checkbox</type>
</CustomField>