force-app/main/default/objects/Opportunity/fields/NaechsterSchrittExtern__c.field-meta.xml
<CustomField>
    <fullName>NaechsterSchrittExtern__c</fullName>
    <inlineHelpText>Dieses Feld wird im Vertriebsportal angezeigt</inlineHelpText>
    <label>Nächster Schritt (extern)</label>
    <type>TextArea</type>
</CustomField>