force-app/main/default/objects/Opportunity/fields/NKZuschussVonBackofficeFreigegeben__c.field-meta.xml
<CustomField>
    <fullName>NKZuschussVonBackofficeFreigegeben__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NK Zuschuss von Backoffice freigegeben</label>
    <type>Checkbox</type>
</CustomField>