force-app/main/default/objects/Opportunity/fields/NKZuschussVonTreasuryFreigegeben__c.field-meta.xml
<CustomField>
    <fullName>NKZuschussVonTreasuryFreigegeben__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NK Zuschuss von Treasury freigegeben</label>
    <type>Checkbox</type>
</CustomField>