force-app/main/default/objects/Opportunity/fields/Notar_Formel__c.field-meta.xml
<CustomField>
    <fullName>Notar_Formel__c</fullName>
    <formula>Immobilie__r.Notar__r.FirstName + &apos; &apos; + Immobilie__r.Notar__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notar Formel</label>
    <type>Text</type>
</CustomField>