force-app/main/default/objects/Opportunity/fields/Notar_Grundschuldbestellung__c.field-meta.xml
<CustomField>
    <fullName>Notar_Grundschuldbestellung__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Notar, bei dem die Grundschuld bestellt wird.</inlineHelpText>
    <label>Notar Grundschuldbestellung</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Notar</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Verkaufschancen (Notar Grundschuldbestellung)</relationshipLabel>
    <relationshipName>GS_Notar_bei_VKC</relationshipName>
    <type>Lookup</type>
</CustomField>